Filter student's schedule by given parameters

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 errNotFound=Schedule for {0} not found
 errEmptyDb=Database is updating. Please try again in few minutes
+errMissingParam=Missing request parameter
