Return 404 error when date range is invalid

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 errNotFound=Schedule for {0} not found
 errEmptyDb=Database is updating. Please try again in few minutes
 errMissingParam=Missing request parameter
+errInvalidDateRange=Date range is invalid
