Implement dictionary endpoint

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 errNotFound=Schedule for {0} not found
 errEmptyDb=Database is updating. Please try again in few minutes
 errMissingParam=Missing request parameter
+errMissingRequiredParam=Missing required parameter: {0}
 errInvalidDateRange=Date range is invalid
+errUnsupportedParam=Unsupported parameter: {0}
